--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New project page</title>
 </head>
 <body>
-    
+    <header>
+        <img style=" width: 100%; height: 20vw;" src="assets/night-sky.png">
+        <div style="position: absolute; text-align: center; top: 20%; left: 50%; transform: translate(-50%, -50%); color: white;">
+            <h1>Neat lil' HTML page</h1>
+            <p>An HTML page made for an assignment at Accenture</p>
+        </div>
+    </header>
 </body>
 </html>
