--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <title>New project page</title>
 </head>
 <body>
-    <header>
+    <header id="home">
         <img style=" width: 100%; height: 20vw;" src="assets/night-sky.png">
         <div style="position: absolute; text-align: center; top: 20%; left: 50%; transform: translate(-50%, -50%); color: white;">
             <h1>Neat lil' HTML page</h1>
             <p>An HTML page made for an assignment at Accenture</p>
         </div>
     </header>
+    <navbar>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contacts">Contacts</a>
+    </navbar>
 </body>
 </html>
