--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     </header>
     <navbar>
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contacts">Contacts</a>
+        <a href="about.html">About</a>
+        <a href="contacts.html">Contacts</a>
     </navbar>
+    <footer>Telma Laudobele &copy; 2023 <br>
+        <a href="https://www.accenture.com/lv-en">Accenture page</a>  <br>
+        <a href="https://www.w3schools.com/">Useful tutorials</a>
+    </footer>
 </body>
 </html>
