Created article with lists and a section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>New project page</title>
 </head>
 <body>
-    <header id="home">
+    <header>
         <img style=" width: 100%; height: 20vw;" src="assets/night-sky.png">
         <div style="position: absolute; text-align: center; top: 20%; left: 50%; transform: translate(-50%, -50%); color: white;">
             <h1>Neat lil' HTML page</h1>
@@ -18,6 +18,35 @@
         <a href="about.html">About</a>
         <a href="contacts.html">Contacts</a>
     </navbar>
+    <main  id="home">
+        <article>
+            <h1>What are my hobbies and favourites?</h1>
+            <ul>
+                <li>Hobbies:</li>
+                <ul>
+                    <li>Art</li>
+                    <li>Writing</li>
+                    <li>Videogames</li>
+                    <li>Music</li>
+                </ul>
+                <li>Foods:</li>
+                <ol>
+                    <li>Sushi</li>
+                    <li>Pizza</li>
+                    <li>Fruit salads</li>
+                </ol>
+                <li>Games:</li>
+                <ol>
+                    <li>Rainworld</li>
+                    <li>Tetris</li>
+                    <li>Stardew valley</li>
+                </ol>
+            </ul>
+        </article>
+        <section>
+            <img src="assets/rat.gif">
+        </section>
+    </main>
     <footer>Telma Laudobele &copy; 2023 <br>
         <a href="https://www.accenture.com/lv-en">Accenture page</a>  <br>
         <a href="https://www.w3schools.com/">Useful tutorials</a>
