--- a/about.html
+++ b/about.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About page</title>
 </head>
 <body>
-    
+    <header id="home">
+        <img style=" width: 100%; height: 20vw;" src="assets/night-sky.png">
+        <div style="position: absolute; text-align: center; top: 20%; left: 50%; transform: translate(-50%, -50%); color: white;">
+            <h1>Neat lil' HTML page</h1>
+            <p>An HTML page made for an assignment at Accenture</p>
+        </div>
+    </header>
+    <navbar>
+        <a href="#home">Home</a>
+        <a href="about.html">About</a>
+        <a href="contacts.html">Contacts</a>
+    </navbar>
+    <main>
+        <section>
+            This project is being made for an assignment given 
+        </section>
+    </main>
 </body>
 </html>
