Finished short paragraph about project

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </navbar>
     <main>
         <section>
-            This project is being made for an assignment given 
+            This project is being made for an assignment given by our mentor in an internship. As time goes on, the webpage will receive updates such as CSS styling and JavaScript functions.
         </section>
     </main>
 </body>
