--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,28 @@
     <title>Contacts page</title>
 </head>
 <body>
-    
+    <header id="home">
+        <img style=" width: 100%; height: 20vw;" src="assets/night-sky.png">
+        <div style="position: absolute; text-align: center; top: 20%; left: 50%; transform: translate(-50%, -50%); color: white;">
+            <h1>Neat lil' HTML page</h1>
+            <p>An HTML page made for an assignment at Accenture</p>
+        </div>
+    </header>
+    <navbar>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="#contacts">Contacts</a>
+    </navbar>
 </body>
+<main>
+    <article>
+        <h1>How to contact me</h1>
+        <p>I can be found on github <a href="https://github.com/ratSeraphim">here</a>. <br>
+        Otherwise, contact me at telma.laudobele@accenture.com </p>
+    </article>
+</main>
+<footer>Telma Laudobele &copy; 2023 <br>
+    <a href="https://www.accenture.com/lv-en">Accenture page</a>  <br>
+    <a href="https://www.w3schools.com/">Useful tutorials</a>
+</footer>
 </html>
