Added footers to all pages, fixed links

--- a/about.html
+++ b/about.html
@@ -14,14 +14,18 @@
         </div>
     </header>
     <navbar>
-        <a href="#home">Home</a>
-        <a href="about.html">About</a>
+        <a href="index.html">Home</a>
+        <a href="#about">About</a>
         <a href="contacts.html">Contacts</a>
     </navbar>
-    <main>
+    <main id="about">
         <section>
             This project is being made for an assignment given by our mentor in an internship. As time goes on, the webpage will receive updates such as CSS styling and JavaScript functions.
         </section>
     </main>
+    <footer>Telma Laudobele &copy; 2023 <br>
+        <a href="https://www.accenture.com/lv-en">Accenture page</a>  <br>
+        <a href="https://www.w3schools.com/">Useful tutorials</a>
+    </footer>
 </body>
 </html>
