--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
         <a href="#contacts">Contacts</a>
     </navbar>
 </body>
-<main>
+<main id="contacts">
     <article>
         <h1>How to contact me</h1>
         <p>I can be found on github <a href="https://github.com/ratSeraphim">here</a>. <br>
