--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <a href="about.html">About</a>
         <a href="contacts.html">Contacts</a>
     </navbar>
+    <aside style="float: right;">
+        <h1>Fun fact:</h1>
+        <p>A shrimp's heart is in its head. <br>
+            Shrimp make excellent pets for anyone interested in aquariums: <br>
+            They clean their surroundings and you can keep <br>
+            <b>10-25 small shrimps in a 5 gallon aquarium</b> <br>
+            because of the small amount of waste they produce.
+        </p>
+    </aside>
     <main  id="home">
         <article>
             <h1>What are my hobbies and favourites?</h1>
@@ -47,6 +56,7 @@
             <img src="assets/rat.gif">
         </section>
     </main>
+
     <footer>Telma Laudobele &copy; 2023 <br>
         <a href="https://www.accenture.com/lv-en">Accenture page</a>  <br>
         <a href="https://www.w3schools.com/">Useful tutorials</a>
