Changed semantic tag in contacts

--- a/contacts.html
+++ b/contacts.html
@@ -20,11 +20,11 @@
     </navbar>
 </body>
 <main id="contacts">
-    <article>
+    <section>
         <h1>How to contact me</h1>
         <p>I can be found on github <a href="https://github.com/ratSeraphim">here</a>. <br>
         Otherwise, contact me at telma.laudobele@accenture.com </p>
-    </article>
+    </section>
 </main>
 <footer>Telma Laudobele &copy; 2023 <br>
     <a href="https://www.accenture.com/lv-en">Accenture page</a>  <br>
