Added contacts form

--- a/contacts.html
+++ b/contacts.html
@@ -21,6 +21,19 @@
 </body>
 <main id="contacts">
     <section>
+        <form>
+            <label>Name</label><br>
+            <input type="text" id="name" name="fullname" placeholder="Your name and last name"> <br>
+            <label>Email</label><br>
+            <input type="email" id="email" name="email" placeholder="email@email.com"><br>
+            <label>Subject</label><br>
+            <input type="text" id="subject" name="subject" placeholder="Message subject"></input> <br>
+            <label>Message</label><br>
+            <textarea id="message" name="message" placeholder="Message content"></textarea> <br>
+
+        </form>
+    </section>
+    <section>
         <h1>How to contact me</h1>
         <p>I can be found on github <a href="https://github.com/ratSeraphim">here</a>. <br>
         Otherwise, contact me at telma.laudobele@accenture.com </p>
