Changed header to reflect changes in all html files

--- a/about.html
+++ b/about.html
@@ -6,9 +6,8 @@
     <title>About page</title>
 </head>
 <body>
-    <header id="home">
-        <img style=" width: 100%; height: 20vw;" src="assets/night-sky.png">
-        <div style="position: absolute; text-align: center; top: 20%; left: 50%; transform: translate(-50%, -50%); color: white;">
+    <header style="background-image: url('assets/night-sky.png');">
+        <div style="text-align: center; color: white;">
             <h1>Neat lil' HTML page</h1>
             <p>An HTML page made for an assignment at Accenture</p>
         </div>
