--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="files/style.css">
     <title>New project page</title>
 </head>
 <body>
-    <header style="background-image: url('assets/night-sky.png');">
-        <div style="text-align: center; color: white;">
-            <h1>Neat lil' HTML page</h1>
-            <p>An HTML page made for an assignment at Accenture</p>
-        </div>
+    <header>
+        <h1>Neat lil' HTML page</h1>
+        <p>An HTML page made for an assignment at Accenture</p>
     </header>
     <navbar>
         <a href="#home">Home</a>
