Changed all units to pixels, fixed header for all pages

--- a/contacts.html
+++ b/contacts.html
@@ -7,11 +7,9 @@
     <title>Contacts page</title>
 </head>
 <body>
-    <header style="background-image: url('assets/night-sky.png');">
-        <div style="text-align: center; color: white;">
+    <header>
             <h1>Neat lil' HTML page</h1>
             <p>An HTML page made for an assignment at Accenture</p>
-        </div>
     </header>
     <navbar>
         <a href="index.html">Home</a>
