Stylized footer, changed bg color value

--- a/index.html
+++ b/index.html
@@ -55,9 +55,14 @@
         </section>
     </main>
 
-    <footer>Telma Laudobele &copy; 2023 <br>
-        <a href="https://www.accenture.com/lv-en">Accenture page</a>  <br>
-        <a href="https://www.w3schools.com/">Useful tutorials</a>
+    <footer>
+        <div class="links">
+            <a href="https://www.accenture.com/lv-en">Accenture page</a>
+            <a href="https://www.w3schools.com/">W3schools</a>
+            <a href="https://www.youtube.com/@KevinPowell">CSS youtube tutorials</a>
+            <a href="https://github.com/ratSeraphim">Github profile</a> 
+        </div>
+        Telma Laudobele &copy; 2023 
     </footer>
 </body>
 </html>
