Stylized main, articles and sections, updated content in html

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header >
             <h1>Neat lil' HTML page</h1>
-            <p>An HTML page made for an assignment at Accenture</p>
+            <p>A webpage made for an assignment at Accenture</p>
     </header>
     <navbar>
         <a href="index.html">Home</a>
@@ -18,7 +18,9 @@
     </navbar>
     <main id="about">
         <section>
-            This project is being made for an assignment given by our mentor in an internship. As time goes on, the webpage will receive updates such as CSS styling and JavaScript functions.
+            <p>I am the creator of this site, Telma Laudobele. At the time of writing this (12th of January, 2023) I have been studying at LVT for 4 years and am participating in an internship for my final credits.</p>
+            <p>Programming is both a passion and the career path I've chosen. Though I am still learning and run into obstacles often, I'm determined to become a great programmer.</p>
+            <p>This project is being made for an assignment given by our mentor in the aforementioned internship. As time goes on, the webpage will receive a multitude of updates such as CSS styling and JavaScript functions.</p>
         </section>
     </main>
     <footer>
