--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 <body>
     <header>
             <h1>Neat lil' HTML page</h1>
-            <p>An HTML page made for an assignment at Accenture</p>
+            <p>A webpage made for an assignment at Accenture</p>
     </header>
     <navbar>
         <a href="index.html">Home</a>
@@ -20,6 +20,8 @@
 <main id="contacts">
     <section>
         <form>
+            <h1>This does not function yet!</h1>
+
             <label>Name</label><br>
             <input type="text" id="name" name="fullname" placeholder="Your name and last name"> <br>
             <label>Email</label><br>
@@ -28,12 +30,12 @@
             <input type="text" id="subject" name="subject" placeholder="Message subject"></input> <br>
             <label>Message</label><br>
             <textarea id="message" name="message" placeholder="Message content"></textarea> <br>
-
+            <button type="submit">Submit</button>
         </form>
     </section>
     <section>
         <h1>How to contact me</h1>
-        <p>I can be found on github <a href="https://github.com/ratSeraphim">here</a>. <br>
+        <p>I can be found on github: <a href="https://github.com/ratSeraphim">Click here</a>. <br>
         Otherwise, contact me at telma.laudobele@accenture.com </p>
     </section>
 </main>
