--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
     <header>
         <h1>Neat lil' HTML page</h1>
-        <p>An HTML page made for an assignment at Accenture</p>
+        <p>A webpage made for an assignment at Accenture</p>
     </header>
     <navbar>
         <a href="#home">Home</a>
         <a href="about.html">About</a>
         <a href="contacts.html">Contacts</a>
     </navbar>
-    <aside style="float: right;">
+    
+    <aside>
         <h1>Fun fact:</h1>
         <p>A shrimp's heart is in its head. <br>
             Shrimp make excellent pets for anyone interested in aquariums: <br>
@@ -26,6 +27,7 @@
         </p>
     </aside>
     <main  id="home">
+    
         <article>
             <h1>What are my hobbies and favourites?</h1>
             <ul>
@@ -51,6 +53,7 @@
             </ul>
         </article>
         <section>
+            <h1>You have been blessed by the rat</h1>
             <img src="assets/rat.gif">
         </section>
     </main>
