--- a/contacts.html
+++ b/contacts.html
@@ -19,16 +19,16 @@
 </body>
 <main id="contacts">
     <section>
-        <form>
+        <form id="contactlist">
             <h1>This does not function yet!</h1>
 
-            <label>Name</label><br>
+            <label>Name</label>
             <input type="text" id="name" name="fullname" placeholder="Your name and last name"> <br>
-            <label>Email</label><br>
+            <label>Email</label>
             <input type="email" id="email" name="email" placeholder="email@email.com"><br>
-            <label>Subject</label><br>
+            <label>Subject</label>
             <input type="text" id="subject" name="subject" placeholder="Message subject"></input> <br>
-            <label>Message</label><br>
+            <label>Message</label>
             <textarea id="message" name="message" placeholder="Message content"></textarea> <br>
             <button type="submit">Submit</button>
         </form>
