--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
     
     <aside>
         <h1>Fun fact:</h1>
-        <p>A shrimp's heart is in its head. <br>
-            Shrimp make excellent pets for anyone interested in aquariums: <br>
-            They clean their surroundings and you can keep <br>
-            <b>10-25 small shrimps in a 5 gallon aquarium</b> <br>
+        <p>A shrimp's heart is in its head.
+            Shrimp make excellent pets for anyone interested in aquariums:
+            They clean their surroundings and you can keep
+            <span>10-25 small shrimps in a 5 gallon aquarium</span>
             because of the small amount of waste they produce.
         </p>
     </aside>
+
+
     <main  id="home">
     
         <article>
